--- a/Lab_4/QUESTION1/L4Q1.ipynb
+++ b/Lab_4/QUESTION1/L4Q1.ipynb
@@ -234,6 +234,26 @@
     "print(f\"Saved HSV visualization to {output_dir.resolve()}\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a4e031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 6: Analysis Comments\n",
+    "print(\"\\n--- Block 6: Analysis ---\")\n",
+    "print(\"Q: Comment on differences in motion vectors in fast-moving vs slow-moving regions.\")\n",
+    "print(\"\\nAnalysis:\")\n",
+    "print(\"1. Fast-Moving Regions:\")\n",
+    "print(\"   - In the 'Arrow Plot', these regions (like foreground objects, e.g., guard rails, nearby trees) have the LONGEST arrows, indicating large pixel displacement.\")\n",
+    "print(\"   - In the 'HSV Plot', these same regions appear BRIGHTEST (highest 'Value'), as brightness is mapped to motion speed (magnitude).\")\n",
+    "print(\"\\n2. Slow-Moving Regions:\")\n",
+    "print(\"   - In the 'Arrow Plot', these regions (like the distant background, sky, or road far ahead) have very short, DOT-LIKE arrows, indicating minimal pixel displacement.\")\n",
+    "print(\"   - In the 'HSV Plot', these regions appear DARK or BLACK, as their motion magnitude is at or near zero.\")\n",
+    "print(\"\\nThis effect, where closer objects appear to move faster than distant ones, is known as motion parallax.\")"
+   ]
   }
  ],
  "metadata": {
